FIX text-align center

--- a/assets/style.css
+++ b/assets/style.css
@@ -82,6 +82,7 @@ article:not(.reverse) .wrapper {
   color: black;
   padding: 1em;
   font-weight: bold;
+  text-align: center;
 }
 
 /** Core **/
